package com.game.proto;
option java_package = "com.game.pb.command";
option java_outer_classname = "ProtocolInProto";

enum ProtocolIn
{
    PING = 0x0001;          // ping
}